--- a/photoshoped.html
+++ b/photoshoped.html
@@ -11,7 +11,7 @@
   <title>Photoshoped</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/photoshoped.css?400531126" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/photoshoped.css?3911988961" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -43,6 +43,18 @@
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u551" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u553-4"><!-- content --><p>About</p></div></a>
     </div>
    </nav>
+   <div class="clip_frame colelem" id="u869"><!-- image -->
+    <img class="block" id="u869_img" src="images/abstract-design-wallpaper-42-1280x720%20(%20rework%20).jpg" alt="" width="1280" height="720"/>
+   </div>
+   <div class="clip_frame colelem" id="u889"><!-- image -->
+    <img class="block" id="u889_img" src="images/nature%20(rework).jpg" alt="" width="1880" height="1058"/>
+   </div>
+   <div class="clip_frame colelem" id="u895"><!-- image -->
+    <img class="block" id="u895_img" src="images/phone%20birds.jpg" alt="" width="1500" height="1000"/>
+   </div>
+   <div class="clip_frame colelem" id="u901"><!-- image -->
+    <img class="block" id="u901_img" src="images/smartphone.jpg" alt="" width="1876" height="1143"/>
+   </div>
    <div class="clearfix colelem" id="u251-4"><!-- content -->
     <p>If you want to support me please donate any amount you want</p>
    </div>
