--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "webpro.js", "jquery.watch.js", "about.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "about.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,7 +11,7 @@
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?4293250055" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?3862808069" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -30,11 +30,6 @@
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u441"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u458" href="images.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u459-4"><!-- content --><p>Images</p></div></a>
-     <div class="SubMenu  MenuLevel1 clearfix" id="u442"><!-- vertical box -->
-      <ul class="SubMenuView clearfix colelem" id="u443"><!-- vertical box -->
-       <li class="MenuItemContainer clearfix colelem" id="u444"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u445" href="originals.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u447-4"><!-- content --><p>Originals</p></div></a><div class="SubMenu  MenuLevel2 clearfix" id="u449"><!-- vertical box --><ul class="SubMenuView clearfix colelem" id="u450"><!-- vertical box --><li class="MenuItemContainer clearfix colelem" id="u451"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u452" href="photoshoped.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u455-4"><!-- content --><p>Photoshoped</p></div></a></li></ul></div></li>
-      </ul>
-     </div>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u434"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u435" href="tools.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u437-4"><!-- content --><p>Tools</p></div></a>
@@ -42,31 +37,10 @@
     <div class="MenuItemContainer clearfix grpelem" id="u462"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u465" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u467-4"><!-- content --><p>About</p></div></a>
     </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u985"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u986" href="tutorials.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u989-4"><!-- content --><p>Tutorials</p></div></a>
+    </div>
    </nav>
-   <form class="form-grp clearfix colelem" id="widgetu850" method="post" enctype="multipart/form-data" action="scripts/form-u850.php"><!-- none box -->
-    <div class="fld-grp clearfix grpelem" id="widgetu851" data-required="true"><!-- none box -->
-     <label class="fld-label actAsDiv clearfix grpelem" id="u853-5" for="widgetu851_input"><!-- content --><span class="actAsPara">Όνομα:</span></label>
-     <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u852-5"><!-- content --><input class="wrapped-input" type="text" spellcheck="false" id="widgetu851_input" name="custom_U851" tabindex="1"/><label class="wrapped-input fld-prompt" id="widgetu851_prompt" for="widgetu851_input"><span class="actAsPara">Πληκτρολογήστε όνομα</span></label></span>
-    </div>
-    <div class="fld-grp clearfix grpelem" id="widgetu863" data-required="true" data-type="email"><!-- none box -->
-     <label class="fld-label actAsDiv clearfix grpelem" id="u865-5" for="widgetu863_input"><!-- content --><span class="actAsPara">Email:</span></label>
-     <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u866-5"><!-- content --><input class="wrapped-input" type="text" spellcheck="false" id="widgetu863_input" name="Email" tabindex="2"/><label class="wrapped-input fld-prompt" id="widgetu863_prompt" for="widgetu863_input"><span class="actAsPara">Πληκτρολογήστε email</span></label></span>
-    </div>
-    <div class="clearfix grpelem" id="u857-5"><!-- content -->
-     <p>Υποβολή της φόρμας...</p>
-    </div>
-    <div class="clearfix grpelem" id="u856-5"><!-- content -->
-     <p>Ο διακομιστής αντιμετώπισε κάποιο σφάλμα.</p>
-    </div>
-    <div class="clearfix grpelem" id="u862-5"><!-- content -->
-     <p>Η φόρμα ελήφθη.</p>
-    </div>
-    <input class="submit-btn NoWrap grpelem" id="u855-21" type="submit" value="" tabindex="4"/><!-- state-based BG images -->
-    <div class="fld-grp clearfix grpelem" id="widgetu858" data-required="false"><!-- none box -->
-     <label class="fld-label actAsDiv clearfix grpelem" id="u861-5" for="widgetu858_input"><!-- content --><span class="actAsPara">Μήνυμα:</span></label>
-     <span class="fld-textarea actAsDiv clearfix grpelem" id="u859-5"><!-- content --><textarea class="wrapped-input" id="widgetu858_input" name="custom_U858" tabindex="3"></textarea><label class="wrapped-input fld-prompt" id="widgetu858_prompt" for="widgetu858_input"><span class="actAsPara">Πληκτρολογήστε το μήνυμά σας</span></label></span>
-    </div>
-   </form>
    <div class="clearfix colelem" id="u245-4"><!-- content -->
     <p>If you want to support me please donate any amount you want</p>
    </div>
@@ -87,11 +61,6 @@
 </div>
    <div class="verticalspacer"></div>
   </div>
-  <div class="preload_images">
-   <img class="preload" src="images/u855-21-r.png" alt=""/>
-   <img class="preload" src="images/u855-21-m.png" alt=""/>
-   <img class="preload" src="images/u855-21-fs.png" alt=""/>
-  </div>
   <!-- JS includes -->
   <script type="text/javascript">
    if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
@@ -101,7 +70,6 @@
 </script>
   <script src="scripts/museutils.js?183364071" type="text/javascript"></script>
   <script src="scripts/jquery.musemenu.js?3957776250" type="text/javascript"></script>
-  <script src="scripts/webpro.js?3803554875" type="text/javascript"></script>
   <script src="scripts/jquery.watch.js?71412426" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -112,7 +80,6 @@ typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw E
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initWidget('.MenuBar', function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-Muse.Utils.initWidget('#widgetu850', function(elem) { new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu850 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
