--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3886395440" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?28450098" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -24,25 +24,36 @@
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <nav class="MenuBar clearfix colelem" id="menuu158"><!-- horizontal box -->
-    <div class="MenuItemContainer clearfix grpelem" id="u166"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u167" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u168-4"><!-- content --><p>Home</p></div></a>
+   <nav class="MenuBar clearfix colelem" id="menuu911"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u947"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u950" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u953-4"><!-- content --><p>Home</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u193"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u194" href="images.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u197-4"><!-- content --><p>Images</p></div></a>
-     <div class="SubMenu  MenuLevel1 clearfix" id="u198"><!-- vertical box -->
-      <ul class="SubMenuView clearfix colelem" id="u199"><!-- vertical box -->
-       <li class="MenuItemContainer clearfix colelem" id="u333"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u334" href="originals.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u336-4"><!-- content --><p>Originals</p></div></a><div class="SubMenu  MenuLevel2 clearfix" id="u338"><!-- vertical box --><ul class="SubMenuView clearfix colelem" id="u339"><!-- vertical box --><li class="MenuItemContainer clearfix colelem" id="u340"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u341" href="photoshoped.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u343-4"><!-- content --><p>Photoshoped</p></div></a></li></ul></div></li>
-      </ul>
-     </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u919"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u920" href="images.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u923-4"><!-- content --><p>Images</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u206"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u209" href="tools.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u212-4"><!-- content --><p>Tools</p></div></a>
+    <div class="MenuItemContainer clearfix grpelem" id="u940"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u943" href="tools.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u945-4"><!-- content --><p>Tools</p></div></a>
     </div>
-    <div class="MenuItemContainer clearfix grpelem" id="u180"><!-- vertical box -->
-     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u181" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u184-4"><!-- content --><p>About</p></div></a>
+    <div class="MenuItemContainer clearfix grpelem" id="u912"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u913" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u915-4"><!-- content --><p>About</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u999"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1002" href="tutorials.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1003-4"><!-- content --><p>Tutorials</p></div></a>
     </div>
    </nav>
+   <div class="clearfix colelem" id="u907-4"><!-- content -->
+    <p>All about photography and photoshop</p>
+   </div>
+   <div class="clearfix colelem" id="u908-4"><!-- content -->
+    <p>By Kostas Mokas</p>
+   </div>
+   <div class="clearfix colelem" id="u909-4"><!-- content -->
+    <p>You want to learn all about photography and photoshop or you want and the tool for these jod? Then you are in the best place</p>
+   </div>
+   <div class="clearfix colelem" id="u910-6"><!-- content -->
+    <p><span id="u910">In these these site you can find stock free images and also photoshoped images which you can download they and practice with them.</span></p>
+    <p><span id="u910-3">Moreover you can download some tools which is for these job through the links in &quot;Tools&quot; section and see tutorial how to use it</span></p>
+   </div>
    <div class="clearfix colelem" id="u239-4"><!-- content -->
     <p>If you want to support me please donate any amount you want</p>
    </div>
