--- a/tools.html
+++ b/tools.html
@@ -11,7 +11,7 @@
   <title>Tools</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/tools.css?497871139" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/tools.css?4096537605" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -30,11 +30,6 @@
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u398"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u415" href="images.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u416-4"><!-- content --><p>Images</p></div></a>
-     <div class="SubMenu  MenuLevel1 clearfix" id="u399"><!-- vertical box -->
-      <ul class="SubMenuView clearfix colelem" id="u400"><!-- vertical box -->
-       <li class="MenuItemContainer clearfix colelem" id="u401"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u402" href="originals.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u404-4"><!-- content --><p>Originals</p></div></a><div class="SubMenu  MenuLevel2 clearfix" id="u406"><!-- vertical box --><ul class="SubMenuView clearfix colelem" id="u407"><!-- vertical box --><li class="MenuItemContainer clearfix colelem" id="u408"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u409" href="photoshoped.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u412-4"><!-- content --><p>Photoshoped</p></div></a></li></ul></div></li>
-      </ul>
-     </div>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u391"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u392" href="tools.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u394-4"><!-- content --><p>Tools</p></div></a>
@@ -42,7 +37,13 @@
     <div class="MenuItemContainer clearfix grpelem" id="u419"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u422" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u424-4"><!-- content --><p>About</p></div></a>
     </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u978"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u979" href="tutorials.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u981-4"><!-- content --><p>Tutorials</p></div></a>
+    </div>
    </nav>
+   <div class="clearfix colelem" id="u957-4"><!-- content -->
+    <p><span id="u957">Here you will find some tools which will help you to go farther in photografy and photoshop</span></p>
+   </div>
    <div class="clearfix colelem" id="u242-4"><!-- content -->
     <p>If you want to support me please donate any amount you want</p>
    </div>
