--- a/images.html
+++ b/images.html
@@ -11,7 +11,7 @@
   <title>Images</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/images.css?421501335" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/images.css?206557838" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -30,17 +30,15 @@
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u355"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u372" href="images.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u373-4"><!-- content --><p>Images</p></div></a>
-     <div class="SubMenu  MenuLevel1 clearfix" id="u356"><!-- vertical box -->
-      <ul class="SubMenuView clearfix colelem" id="u357"><!-- vertical box -->
-       <li class="MenuItemContainer clearfix colelem" id="u358"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u359" href="originals.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u361-4"><!-- content --><p>Originals</p></div></a><div class="SubMenu  MenuLevel2 clearfix" id="u363"><!-- vertical box --><ul class="SubMenuView clearfix colelem" id="u364"><!-- vertical box --><li class="MenuItemContainer clearfix colelem" id="u365"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u366" href="photoshoped.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u369-4"><!-- content --><p>Photoshoped</p></div></a></li></ul></div></li>
-      </ul>
-     </div>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u348"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u349" href="tools.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u351-4"><!-- content --><p>Tools</p></div></a>
     </div>
     <div class="MenuItemContainer clearfix grpelem" id="u376"><!-- vertical box -->
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u379" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u381-4"><!-- content --><p>About</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u964"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u965" href="tutorials.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u967-4"><!-- content --><p>Tutorials</p></div></a>
     </div>
    </nav>
    <div class="clearfix colelem" id="u235-4"><!-- content -->
