--- a/tutorials.html
+++ b/tutorials.html
@@ -11,7 +11,7 @@
   <title>Tutorials</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/tutorials.css?3803420874" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/tutorials.css?489340853" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -41,6 +41,9 @@
      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1010" href="tutorials.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1013-4"><!-- content --><p>Tutorials</p></div></a>
     </div>
    </nav>
+   <div class="clearfix colelem" id="u1111-4"><!-- content -->
+    <p><span id="u1111">Here it is some usefull tutorials from youtube</span></p>
+   </div>
    <div class="clearfix colelem" id="u1061-4"><!-- content -->
     <p>If you want to support me please donate any amount you want</p>
    </div>
